Fix some wider images having a gap below them

--- a/MemoryMosaic/Styles/Components/LibraryContentViewer/Thumbnail.scss
+++ b/MemoryMosaic/Styles/Components/LibraryContentViewer/Thumbnail.scss
@@ -1,3 +1,5 @@
+@import "../../Mixins";
+
 .thumbnail {
 	position: relative; /* https://stackoverflow.com/a/12365963 */
 	cursor: pointer;
@@ -13,7 +15,7 @@
 		top: 8px;
 		right: 8px;
 	}
-	
+
 	> .description-icon {
 		position: absolute;
 		bottom: 8px;
@@ -31,6 +33,7 @@
 }
 
 div .thumbnail {
+	@include flex-justify-center;
 	height: 19vh;
 	flex-grow: 1;
 	margin: 2px;
